@@ -553,6 +553,7 @@
           description="--> creates the API documentation">
     <mkdir dir="${build.javadocs}"/>
     <javadoc packagenames="org.apache.*"
+             useexternalfile="yes"
              sourcepath="${java.dir}"
              destdir="${build.javadocs}"
              author="true"
